--- a/sample-voting-app/postgres-pod.yml
+++ b/sample-voting-app/postgres-pod.yml
@@ -7,7 +7,7 @@ metadata:
     app: demo-voting-app
 spec:
   containers:
-    - name: rpostgres
+    - name: postgres
       image: postgres:9.4
       ports:
         - containerPort: 5432
